Gap Solved

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    margin: 57px 190px 0px 190px;
+    padding: 57px 190px 0px 190px;
 }
 
 .navigation-links{
@@ -571,7 +571,7 @@ footer{
     }
 
     .navigation-header{
-        margin: 52px  20px 0px 20px;
+        padding: 52px  20px 0px 20px;
     }
 
     /* Mobile Banner */
